--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="hero-image-container">
                         <div class="hero-placeholder-image">
                             <i class="fas fa-university"></i>
-                            <span>Modern Banking</span>
+                            <span>Modern</span>
                         </div>
                     </div>
                     <div class="floating-card">
@@ -761,7 +761,7 @@
                             <label for="loginPassword">Password</label>
                             <div class="password-input-group">
                                 <input type="password" id="loginPassword" name="password" required>
-                                <button type="button" class="password-toggle" onclick="togglePasswordVisibility('loginPassword')">
+                                <button title="eye" type="button" class="password-toggle" onclick="togglePasswordVisibility('loginPassword')">
                                     <i class="fas fa-eye"></i>
                                 </button>
                             </div>
@@ -866,7 +866,7 @@
                             <label for="signupPassword">Password</label>
                             <div class="password-input-group">
                                 <input type="password" id="signupPassword" name="password" required>
-                                <button type="button" class="password-toggle" onclick="togglePasswordVisibility('signupPassword')">
+                                <button title="eye" type="button" class="password-toggle" onclick="togglePasswordVisibility('signupPassword')">
                                     <i class="fas fa-eye"></i>
                                 </button>
                             </div>
@@ -876,7 +876,7 @@
                             <label for="confirmPassword">Confirm Password</label>
                             <div class="password-input-group">
                                 <input type="password" id="confirmPassword" name="confirmPassword" required>
-                                <button type="button" class="password-toggle" onclick="togglePasswordVisibility('confirmPassword')">
+                                <button title="eye" type="button" class="password-toggle" onclick="togglePasswordVisibility('confirmPassword')">
                                     <i class="fas fa-eye"></i>
                                 </button>
                             </div>
