--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="loader-container">
+      <div class="loader"></div>
+    </div>
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
       <div class="nav-container">
@@ -68,6 +71,11 @@
           </div>
           <div class="hero-image" data-aos="fade-left" data-aos-duration="1000">
             <div class="hero-image-container">
+              <img src="image/BankingBg.png" alt="">
+            </div>
+          </div>
+          <!-- <div class="hero-image" data-aos="fade-left" data-aos-duration="1000">
+            <div class="hero-image-container">
               <div class="hero-placeholder-image">
                 <i class="fas fa-university"></i>
                 <span>Modern Bankin</span>
@@ -85,7 +93,7 @@
               <i class="fas fa-chart-line"></i>
               <span>Growth</span>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
